--- a/BlogPosts/BLAST_03-08-17/BLAST_03-08-17.html
+++ b/BlogPosts/BLAST_03-08-17/BLAST_03-08-17.html
@@ -37,7 +37,7 @@
                 organism of interest) and use <a href="https://blast.ncbi.nlm.nih.gov/Blast.cgi">BLAST</a> to check the unaligned sequence data
                 against online databases.<br><br>
                 
-                I have also used <a href="https://blast.ncbi.nlm.nih.gov/Blast.cgi">BLAST</a> to conduct local searches. Here I have had a panel of sequences
+                I have also used <a href="https://blast.ncbi.nlm.nih.gov/Blast.cgi">BLAST</a> to conduct local searches. Here, I have had a panel of sequences
                 that I want to search for in some genetic data. To do this, I have built local <a href="https://blast.ncbi.nlm.nih.gov/Blast.cgi">BLAST</a>
                 databases to compare my query sequences against.<br><br>
                 
